--- a/hzs_frontend/src/login/login_stranica.html
+++ b/hzs_frontend/src/login/login_stranica.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type= "text/css" href="login_stranica.css">
         <body>
           <div class="loginbox">
-            <img src="avataricon.png" class="avatar">
+            <img src="slike/avataricon.png" class="avatar">
              <h1>Ulogujte se</h1>
              <form>
                <p>Korisnicko ime</p>
@@ -12,7 +12,7 @@
                <p>Sifra</p>
                <input type="password" name="" placeholder="Unesite sifru">
                <input type="submit" name="" value="Ulogujte se">
-               <a href='#'>Izgubili ste lozinku?</a>
+               <a href='#'>Izgubili ste lozinku?</a><br>
                <a href='#'>Nemate nalog?</a>
              </form>
 
